Assignment 4 init, warmup finished

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,18 @@ cabal.project.local~
 .DS_Store
 bin/configlet
 bin/configlet.exe
+.eunit
+*.o
+*.beam
+*.plt
+erl_crash.dump
+.concrete/DEV_MODE
+# rebar 2.x
+.rebar
+rel/example_project
+ebin/*.beam
+deps
+# rebar 3
+.rebar3
+_build/
+_checkouts/
